@@ -93,13 +93,11 @@ FIND = @FIND@
 FLEX = @FLEX@
 FLEXLEXER_PATH = @FLEXLEXER_PATH@
 FONTFORGE = @FONTFORGE@
-GCC = @GCC@
 GROFF = @GROFF@
 GUILE = @GUILE@
 GUILE_CFLAGS = @GUILE_CFLAGS@
 GUILE_CONFIG = @GUILE_CONFIG@
 GUILE_LDFLAGS = @GUILE_LDFLAGS@
-GXX = @GXX@
 ICFLAGS = @ICFLAGS@
 ILDFLAGS = @ILDFLAGS@
 INIMETAFONT = @INIMETAFONT@
