@@ -1,0 +1,3 @@
+
+This is a font of music symbols.  All MF sources are original.  Most
+of the doco is in comments in the MF code.
